# Minecraft-RCON-Console

./: .env  .gitignore  .gitlab-ci.yml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  LICENSE  README.md  Rocket.toml  renovate.json
config/: commands.json
src/: main.rs
src/api/: mod.rs  rcon.rs  rcon_test.rs
src/app/: ui.rs
src/config/: base.rs  base_test.rs  mod.rs
src/rcon/: client.rs  client_test.rs  configuration.rs  configuration_test.rs  error.rs  mod.rs  request.rs  request_test.rs  response.rs  response_test.rs
src/telemetry/: init.rs  mod.rs  request_span.rs  request_tracing_fairing.rs  request_tracing_guard.rs
ui/: .gitignore  .npmrc  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json  vitest.config.ts
ui/src/: index.html  styles.scss
ui/src/animations/: fade.ts
ui/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
ui/src/app/console/: console.component.html  console.component.scss  console.component.spec.ts  console.component.ts
ui/src/app/core/: icons.module.spec.ts  icons.module.ts  index.ts
ui/src/app/core/directives/: collapse.directive.spec.ts  collapse.directive.ts  index.ts
ui/src/app/core/loader/: index.ts  loader.component.html  loader.component.spec.ts  loader.component.ts
ui/src/app/core/pipes/: localize.pipe.spec.ts  localize.pipe.ts
ui/src/app/services/: index.ts  rcon.service.ts  settings.service.ts  storage.service.spec.ts  storage.service.ts
ui/src/app/shortcuts/: shortcuts.component.html  shortcuts.component.scss  shortcuts.component.spec.ts  shortcuts.component.ts
ui/src/app/utils/: localizer.spec.ts  localizer.ts
ui/src/app/utils/locales/: strings.json
ui/src/config/: minecraft-color-codes.json  minecraft-status-matchers.json  minecraft-style-codes.json  shortcuts.json
ui/src/environments/: environment.prod.ts  environment.ts
ui/src/services/: index.ts  rcon.service.spec.ts  rcon.service.ts  settings.service.spec.ts  settings.service.ts  storage.service.spec.ts  storage.service.ts
ui/src/testing/: utils.ts
ui/src/utils/: localizer.spec.ts  localizer.ts
ui/src/utils/locales/: strings.json
