[package]
name = "minecraft-rcon"
edition = "2024"

[dependencies]
cfg-if = "1.0.1"
dotenvy = "0.15.7"
log = "0.4.27"
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_prometheus = { version = "0.10.1", optional = true }
serde = "1.0.219"
serde_json = { version = "1.0.141", features = ["indexmap"] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["process"] }
utoipa = { version = "5.4.0", features = ["uuid", "rocket_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["rocket", "vendored"], optional = true }

[dev-dependencies]
serial_test = "3.2.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
test-case = "3.3.1"

[features]
default = ["swagger", "metrics"]
release = ["swagger", "metrics"]

swagger = ["dep:utoipa-swagger-ui"]
metrics = ["dep:rocket_prometheus"]
